# SageStore

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Jenkinsfile  README.md  build.py  conanfile.py  conanfile.txt  global_CMakeLists.txt  prompt.md
Client/: CMakeLists.txt
Client/include/: SageStoreClient.hpp
Client/include/ApplicationLogic/: IModule.hpp
Client/include/UI/: UIComponent.hpp
Client/src/: CMakeLists.txt  SageStoreClient.cpp  SageStoreClient.hpp  main.cpp
Client/src/CommunicationLayer/: IDataSerialization.hpp
Client/src/UI/: UIManager.cpp  UIManager.hpp
Server/: CMakeLists.txt
Server/src/: CMakeLists.txt  SageStoreServer.hpp  main.cpp
Server/src/BusinessLogic/: IBusinessModule.hpp
Server/src/DataAccessLayer/: IRepository.hpp
Server/src/IMediator/: IMediator.hpp
_client/: CMakeLists.txt
_client/src/: ApiManager.cpp  ApiManager.hpp  BaseWidgetStyles.hpp  CMakeLists.txt  Constants.cpp  DataTypes.hpp  MainWindow.cpp  MainWindow.hpp  SageStoreClient.cpp  SageStoreClient.hpp  SpdlogWrapper.cpp  SpdlogWrapper.hpp  UiManager.cpp  UiManager.hpp  Utils.cpp  Utils.hpp  logging.cpp  logging.hpp  main.cpp  statements.hpp
_client/src/ApplicationLogic/: IModule.hpp
_client/src/CommunicationLayer/: IDataSerialization.hpp
_client/src/Dialogs/: BaseDialog.hpp  DialogManager.cpp  DialogManager.hpp  LoginDialog.cpp  LoginDialog.hpp  RegistrationDialog.cpp  RegistrationDialog.hpp
_client/src/Localization/: TsTranslator.cpp  TsTranslator.hpp
_client/src/Models/: AuthorizationModel.cpp  AuthorizationModel.hpp  IModel.hpp  IModels.hpp  RegistrationModel.cpp  RegistrationModel.hpp
_client/src/Network/: ApiClient.cpp  ApiClient.hpp  ApiConstants.hpp  ApiManager.cpp  ApiManager.hpp  ConfigManager.cpp  ConfigManager.hpp  Endpoints.hpp  IDataSerializer.hpp  JsonSerializer.cpp  JsonSerializer.hpp  NetworkService.cpp  NetworkService.hpp
_client/src/Settings/: AppSettings.cpp  AppSettings.hpp
_client/src/UI/: QmlTypeRegistrar.cpp  QmlTypeRegistrar.hpp  UIComponent.hpp  UIManager.cpp  UIManager.hpp
_client/src/Ui/: MainMenuActions.hpp  MainWindow.cpp  MainWindow.hpp  QmlTypeRegistrar.cpp  StartupController.cpp  StartupController.hpp  UiManager.cpp  UiManager.hpp  UiScale.hpp  WidgetStyles.hpp
_client/src/ViewModels/: AuthorizationDialogModel.cpp  AuthorizationDialogModel.hpp  AuthorizationViewModel.cpp  AuthorizationViewModel.hpp  IDialogModel.hpp  IViewModel.hpp  NAME_HEREViewModel.cpp  NAME_HEREViewModel.hpp  PurchaseOrdersViewModel.cpp  PurchaseOrdersViewModel.hpp  RegistrationDialogModel.cpp  RegistrationDialogModel.hpp  RegistrationViewModel.cpp  RegistrationViewModel.hpp  UiViewModel.hpp  UserRolesViewModel.cpp  UserRolesViewModel.hpp
_client/src/Views/: AuthorizationDialog.cpp  AuthorizationDialog.hpp  AuthorizationView.cpp  AuthorizationView.hpp  BaseDialog.cpp  BaseView.cpp  BaseView.hpp  MainMenuView.cpp  MainMenuView.hpp  MainWindow.cpp  MainWindow.hpp  MainWindowView.cpp  MainWindowView.hpp  PurchaseOrdersView.cpp  PurchaseOrdersView.hpp  RegistrationDialog.cpp  RegistrationDialog.hpp  RegistrationView.cpp  RegistrationView.hpp  ViewStyles.hpp
_client/src/resources/: translations.qrc
_client/tests/: CMakeLists.txt
_client/tests/component/: CMakeLists.txt  FullstackMainWindowWorkflowTest.cpp  FullstackSalesInvoiceExportTest.cpp  UiTest.cpp
_client/tests/integration/: CMakeLists.txt  FullstackWorkflowTest.cpp
_client/tests/mocks/: ApiManagerMock.hpp  DialogManagerMock.hpp  NetworkServiceMock.hpp  RegistrationDialogMock.hpp
_client/tests/system/: CMakeLists.txt  DebugCliScenarioTest.cpp  FullstackInventoryWorkflowTest.cpp
_client/tests/unit/: AnalyticsViewTest.cpp  ApiManagerTest.cpp  CMakeLists.txt  DialogManagerTest.cpp  ErpModelsTest.cpp  MainWindowTest.cpp  ManagementViewTest.cpp  ProductTypesModelTest.cpp  ProductTypesViewTest.cpp  PurchaseOrdersModelTest.cpp  PurchaseViewTest.cpp  RolesViewTest.cpp  SalesViewTest.cpp  SettingsViewTest.cpp  StartupControllerTest.cpp  StocksModelTest.cpp  StocksViewTest.cpp  SupplierCatalogViewTest.cpp  UiManagerTest.cpp  UsersManagementModelTest.cpp  UsersViewTest.cpp  testMainWindow.cpp  testPurchaseOrdersViewModel.cpp  test_SageStoreClient.cpp  test_UIManager.cpp
_client/tests/wrappers/: DialogManagerWrapper.hpp  UiManagerWrapper.hpp
_client/tools/debug_cli/: CMakeLists.txt  DebugCliRunner.cpp  DebugCliRunner.hpp  JsonUtils.hpp  OperationResult.hpp  ServerController.cpp  ServerController.hpp  TableAutomation.hpp  UiAutomation.cpp  UiAutomation.hpp  main.cpp
_client/translations/: SageStore_uk.ts
_server/: CMakeLists.txt
_server/src/: CMakeLists.txt  DataSpecs.hpp  SageStoreServer.cpp  SageStoreServer.hpp  ServerException.cpp  ServerException.hpp  ServerStartupConfig.cpp  ServerStartupConfig.hpp  main.cpp
_server/src/BusinessLogic/: AnalyticsModule.cpp  AnalyticsModule.hpp  BusinessLogic.cpp  BusinessLogic.hpp  BusinessLogicFacade.cpp  BusinessLogicFacade.hpp  IBusinessModule.hpp  InventoryModule.cpp  InventoryModule.hpp  LogsModule.cpp  LogsModule.hpp  ManagementModule.cpp  ManagementModule.hpp  ModuleUtils.hpp  PurchaseModule.cpp  PurchaseModule.hpp  SalesModule.cpp  SalesModule.hpp  SystemModule.cpp  SystemModule.hpp  UsersModule.cpp  UsersModule.hpp
_server/src/DataAccessLayer/: IRepository.hpp
_server/src/Database/: ContactRepository.cpp  ContactRepository.hpp  DatabaseManager.cpp  DatabaseManager.hpp  EmployeeRepository.cpp  EmployeeRepository.hpp  IDatabaseManager.hpp  IRepository.hpp  InventoryRepository.cpp  InventoryRepository.hpp  LogRepository.cpp  LogRepository.hpp  ProductInfo.cpp  ProductInfo.hpp  ProductInfoRepository.cpp  ProductInfoRepository.hpp  ProductTypeRepository.cpp  ProductTypeRepository.hpp  PurchaseOrderRecordRepository.cpp  PurchaseOrderRecordRepository.hpp  PurchaseOrderRepository.cpp  PurchaseOrderRepository.hpp  PurchaseOrdersRecordRepository.cpp  PurchaseOrdersRecordRepository.hpp  PurchaseOrdersRepository.cpp  PurchaseOrdersRepository.hpp  RepositoryManager.cpp  RepositoryManager.hpp  (+18 more)
_server/tests/: CMakeLists.txt
(+885 files in other folders)
